# fastapi-research

./: pyproject.toml
alembic/: env.py
alembic/versions/: 58eb9a914e41_added_users_relation_to_tasks.py  c06a1af30ef7_added_token_table_with_relation.py
authentication/: .env.sample  alembic.ini  pyproject.toml
authentication/core/: alembic.ini  database.py  main.py
authentication/core/auth/: basic_auth.py  token_auth.py
authentication/core/tasks/: routes.py
authentication/core/users/: schemas.py
core/: config.py  main.py  sqlite.db
core/alembic/: env.py
core/alembic/versions/: 50bd78024054_created_users_table.py  a2d36f6d9c76_created_tasks_table.py
core/auth/: basic_auth.py  jwt_auth.py
core/tasks/: models.py  routes.py
core/users/: models.py  routes.py  schemas.py
full-api-development/: .env.example  .gitignore  docker-compose.yml  main.py  pyproject.toml
full-api-development/alembic/: env.py
full-api-development/alembic/versions/: 9fb22a07b326_create_posts_users_votes_tables.py
full-api-development/app/: config.py  database.py  main.py  models.py  oauth2.py  schemas.py  utils.py
full-api-development/app/auth/: router.py
full-api-development/app/post/: router.py
full-api-development/app/user/: router.py
full-api-development/app/vote/: router.py
