[project]
name = "full-api-development"
version = "0.1.0"
description = "full api development using fastapi framework"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "asyncpg==0.31.0",
    "fastapi[all]==0.138.1",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings==2.14.2",
    "pyjwt>=2.13.0",
    "sqlalchemy==2.0.51",
]
